# android-test-app

./: README.md  adb_fwupd_env.sh  android_aarch64_cross_file.ini  android_amd64_cross_file.ini  enable_binder_trace.sh  fwupd_poc_binder.c  gbinder.conf.in  meson.build  meson_options.txt  poc_service_list.c  simple_fd_svc.c
client/: build.gradle.kts
client/app/: build.gradle.kts
client/app/src/main/: AndroidManifest.xml
client/app/src/main/aidl/org/freedesktop/fwupd/: IFwupdListener.aidl  IPocFwupd.aidl
client/app/src/main/aidl/org/freedesktop/fwupdpoc/: DeepExample.aidl  Device.aidl  IPocFwupd.aidl  IPocFwupdListener.aidl  ISimpleFd.aidl  OtherExample.aidl
client/app/src/main/kotlin/org/freedesktop/fwupd/: MainService.kt
client/app/src/main/kotlin/org/freedesktop/fwupd/client/: MainActivity.kt  UsbActivity.kt
client/app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_usb.xml
subprojects/: libgbinder.wrap
subprojects/packagefiles/libgbinder/: 001_android14_aidl3.diff  meson.build
subprojects/packagefiles/libglibutil/: meson.build
